# Localnetworking_cpp

./: CMakeLists.txt  Localnetworking_cpp.vcxproj  README.MD
Source/: Appmain.cpp  StdInclude.h  Stdinclude.h  Stdinclude.hpp
Source/Configuration/: Defines.h  Defines.hpp
Source/Core/: HTTPHandler.cpp  Instancemanager.cpp  Localnetworking.hpp  Platforminitializer.cpp  Socketmanager.cpp
Source/Localnetworking/: Localnetworking.h  Networklayer3.cpp  Servermanager.cpp
Source/Localnetworking/Interfaces/: IDatagramserver.h  IServer.h  IStreamserver.h
Source/Servers/: IDatagramserver.h  IServer.h  IStreamserver.h  Servermanager.cpp  Servers.h
Source/Servers/Interfaces/: IDatagramserver.h  IServer.h  IStreamserver.h
Source/Utilities/Binary/: Hooking.h
Source/Utility/Binary/: Memprotect.cpp
Source/Utility/Data/: Bytebuffer.cpp  Bytebuffer.h  PackageFS.cpp
